@@ -198,6 +198,10 @@
         "path": "icons/rct1_simulate_on_pressed.png"
     },
     {
+        "path": "icons/infinity.png",
+        "palette": "keep"
+    },
+    {
         "path": "tool/normal_selection_6x6.png",
         "x_offset": 1,
         "y_offset": 4
