@@ -3943,6 +3943,7 @@ enum : uint16_t
 
     STR_RCT1_INTEREST = 6545,
     STR_RCT1_INTEREST_TIP = 6546,
+    STR_ALL_SCENERY = 6547,
 
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
