@@ -945,6 +945,7 @@ enum
     SPR_G2_RCT1_SIMULATE_BUTTON_1,
     SPR_G2_RCT1_SIMULATE_BUTTON_2,
     SPR_G2_RCT1_SIMULATE_BUTTON_3,
+    SPR_G2_INFINITY,
     SPR_G2_LAND_TOOL_SIZE_6,
     SPR_G2_MOUNTAIN_TOOL_EVEN,
     SPR_G2_MOUNTAIN_TOOL_ODD,
